// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render correctly in ali 1`] = `
<input
  className="class"
  controlled={false}
  maxLength={140}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
/>
`;

exports[`Input render correctly in web 1`] = `
<input
  className="class"
  controlled={false}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
/>
`;
